samples/bad/bad010.lat
// return with no value for int function
int main() {
        if (true)
                return;
	;
        return 1;
}
